--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "e-commerce",
+  "homepage": "https://nickamcd.hithub.io/e-commerce/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
